# Image-editor

./: .gitignore  .gitmodules  App.cpp  App.h  CMakeLists.txt  Editor.cpp  Editor.h  Image editor.sln  Image editor.vcxproj  Image editor.vcxproj.filters  README.md  Shader.h  clonerepos.bat  clonerepos.sh  imgui.ini  main.cpp  utils.cpp  utils.h  ~AutoRecover.Image editor.vcxproj0  ~AutoRecover.Image editor.vcxproj2  ~AutoRecover.Image editor.vcxproj4  ~AutoRecover.Image editor.vcxproj5
shaders/: editor.frag  editor.vert
src/: App.cpp  App.h  Editor.cpp  Editor.h  Shader.cpp  main.cpp  utils.cpp  utils.h
